emty list of groups for user